src/yini_test/cases/golden/lenient/valid/comments/block-comment-between-members.yini
@yini

^ Application
name = "lenient-block-comment-between-members"
/*
 * This block comment sits between active members.
 */
enabled = true
