src/yini_test/cases/golden/lenient/invalid/comments/block-comment-unterminated.yini
@yini

^ Application
name = "lenient-block-comment-unterminated"
/* This block comment never closes.
